<resources>
    <string name="app_name">BLE Attractions</string>
    <string name="helloWorldTag">Hello World!</string>
    <string name="exploreButtonDefault">Explore Area</string>
    <string name="ticketButtonDefault">Get/Check Tickets</string>
    <string name="queueButtonDefault">Check Queue Times</string>
    <string name="logoDescription">A Company Logo</string>
    <string name="enableOfflineMode">Enable offline mode</string>
    <string name="disableOfflineMode">Disable offline mode</string>
    <string name="selectOrganisation_lbl">Please select an organisation to view their Explorable options!</string>
    <string name="selectAttraction">Select an attraction to view its info.</string>
    <string name="loadPage_btn">Load Page</string>
    <string name="loadingTimes">Loading Attraction Times…</string>
    <string name="nameList">Name:</string>
    <string name="MACList">MAC Address:</string>
</resources>